# graph-autofusion

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  README.md  README_en.md  SECURITY_en.md  build.sh  classify_rule.yaml  version.cmake
autofuse/: CMakeLists.txt  README.md  README_en.md  blacklist.txt  build_third_party.sh
autofuse/ascendc/api/: CMakeLists.txt  abs.h  argmax.h  argmax_with_value.h  axpy.h  bitwise_and.h  brc_inline_api.h  broadcast.h  cast.h  clipbyvalue.h  compare.h  compare_v2.h  concat.h  datacopy.h  duplicate.h  floor_div.h  gather.h  gelu.h  is_inf.h  isfinite.h  isnan.h  logical.h  logical_not.h  neg.h  pow.h  reciprocal.h  reduce.h  reduce_any.h  reduce_init.h  reduce_max.h  reduce_prod.h  remainder.h  removepad.h  rsqrt.h  scalar_add.h  scalar_div.h  scalar_maximum.h  scalar_minimum.h  scalar_mul.h  scalar_sub.h  (+7 more)
autofuse/ascir/: CMakeLists.txt
autofuse/ascir/generator/: CMakeLists.txt  ascir_builtin_ops.cpp  ascir_builtin_ops_v1.cpp  ascir_common.cpp  ascir_common.h  v1_ascir_att_impl.h  v1_ascir_codegen_impl.h
autofuse/ascir/meta/: CMakeLists.txt  asc_graph_dumper_context.cpp  asc_graph_dumper_context.h  ascend_graph_code_dumper.cpp  ascend_graph_code_dumper.h  ascendc_graph_txt_dumper.cpp  ascendc_graph_txt_dumper.h  ascir.h  ascir_ops_utils.h  ascir_utils.cpp  ascir_utils.h
autofuse/ascir/reg_func/: abs.cpp  argmax.cpp  argmax_with_value.cpp  axpy.cpp  broadcast.cpp  cast.cpp  clipbyvalue.cpp  compare.cpp  concat.cpp  defalut_reg_func.h  default_reg_func.cpp  div.cpp  erf.cpp  gather.cpp  is_inf.cpp  isfinite.cpp  isnan.cpp  logical_and.cpp  logical_not.cpp  logical_or.cpp  masked_fill.cpp  pad.cpp  pow.cpp  reduce.cpp  reduce_max.cpp  remainder.cpp  rsqrt.cpp  sigmoid.cpp  sign.cpp  split.cpp  sub.cpp  tanh.cpp  truediv.cpp  welford.cpp  where.cpp  zerosLike.cpp
autofuse/att/: CMakeLists.txt  gen_tiling_impl.cpp  gen_tiling_impl.h
autofuse/att/base/: arch_param.h  att_const_values.h  base_types.h  model_info.h  perf_breakdown.h
autofuse/att/cmake/: generate_raw_string_header.cmake
autofuse/att/gen_model_info/: gen_model_info.cpp  gen_model_info.h
autofuse/att/generator/: axes_reorder_tiling_code_gen_impl.cpp  axes_reorder_tiling_code_gen_impl.h  generator_config.h  high_perf_tiling_code_gen_impl.cpp  high_perf_tiling_code_gen_impl.h  tiling_code_gen_impl.cpp  tiling_code_gen_impl.h  tiling_code_generator.cpp  tiling_code_generator.h
autofuse/att/util/: att_utils.cpp  att_utils.h  base_types_printer.cpp  base_types_printer.h  common_dfx.h  duration.cpp  duration.h  option_register.cpp  option_register.h  ternary_op.cpp  ternary_op.h  thread_local_context.cpp  thread_local_context.h
autofuse/autofuse/utils/: auto_fuse_config.cpp  auto_fuse_config.h
autofuse/cmake/: af_intf_pub.cmake  autofuse_headers.cmake  test_funcs.cmake
autofuse/codegen/: CMakeLists.txt  ascendc_api_registry.cpp  ascendc_api_registry.h  codegen.cpp  codegen.h  codegen_api_param_dump.cpp  codegen_graph_check.cpp  codegen_graph_check.h  codegen_infershape.cpp  codegen_infershape.h  codegen_kernel.cpp  codegen_kernel.h  codegen_kernel_loop.cpp  codegen_kernel_loop.h  codegen_tiling.cpp  codegen_tiling.h  codegen_tiling_cube_wrapper.h  codegen_tiling_data.cpp  codegen_tiling_data.h  expression_convert_struct.cpp  expression_convert_struct.h
autofuse/common/: CMakeLists.txt  ascgen_log.h  ascgraph_info_complete.cpp  ascgraph_info_complete.h  autofuse_backend_spec_api.cpp  autofuse_backend_spec_api.h  autofuse_platform_api.cpp  autofuse_platform_api.h  code_printer.cpp  code_printer.h  common_utils.cpp  common_utils.h  expression_struct.h  platform_context.cpp  schedule_result.h
autofuse/common/ascir_node_param/: ascir_node_param.cpp  ascir_node_param.h  ascir_param_builder.cpp  ascir_param_builder.h
autofuse/common/atrace/: atrace_pub.h  atrace_types.h  atracing_reporter.cpp  atracing_reporter.h  scope_tracing_recorder.cpp  tracing_recorder.cpp  tracing_recorder.h  tracing_recorder_manager.cpp  tracing_recorder_manager.h
autofuse/common/autofuse_config/: auto_fuse_config.cc  auto_fuse_config.h  auto_fuse_config_parser.cc  auto_fuse_config_parser.h  auto_fuse_config_utils.cc  auto_fuse_config_utils.h
autofuse/common/codegen_api_param/: codegen_api_param.cpp  codegen_api_param.h
autofuse/common/ub_expr/: asc_graph_ub_expr_builder.cpp  asc_graph_ub_expr_builder.h  ub_expr_types.h  ub_expr_utils.cpp  ub_expr_utils.h
autofuse/compiler/: CMakeLists.txt
autofuse/compiler/py_module/: CMakeLists.txt  OWNERS  pyascir.cpp  pyascir.h  pyascir_common_utils.cpp  pyascir_common_utils.h  pyascir_types.cpp  pyascir_types.h  pyautofuse.cpp
autofuse/compiler/python/: __init__.py  asc_codegen_compile.py  ascbc_kernel_compile.py  ascendc_compile.py  ascir_api.py  compile_adapter.py
autofuse/examples/: README.md  README_en.md
autofuse/examples/af_pointwise/: README.md  README_en.md  af_add_ge.py  af_eq_where.py
autofuse/examples/af_reduce/: README.md  README_en.md  af_mul_reducesum.py
autofuse/examples/tensorflow/: README.md
autofuse/graph_metadef/graph/: CMakeLists.txt
autofuse/graph_metadef/proto/: CMakeLists.txt  af_ascendc_ir.proto  af_attr_group_base.proto  af_ir.proto  ascendc_ir.proto
autofuse/mlir/: CMakeLists.txt  README.md
autofuse/optimize/: CMakeLists.txt  graph_properties_cache.h  optimize.cpp  optimize.h  schedule_utils.cpp  schedule_utils.h  static_ub_template_filter.cpp  static_ub_template_filter.h  tensor_layout_utils.cpp  tensor_layout_utils.h
autofuse/scripts/: prepare_third_party.sh
autofuse/tests/: CMakeLists.txt
autofuse/v35/: CMakeLists.txt
super_kernel/: CMakeLists.txt  README.md  README_en.md  pyproject.toml  requirements-dev.txt
super_kernel/docs/: developer_guide.md
super_kernel/examples/: README.md  README_en.md  requirements.txt
super_kernel/kernel/: CMakeLists.txt  sk_entry.asc  sk_flag_diag.h  sk_scope_kernel.asc
super_kernel/scripts/: gen_sk_entry_stub.py  sk_st_cfg.toml  sk_ut_cfg.toml
(+3240 files in other folders)
